<resources>
    <string name="app_name">Agrome</string>
    <string name="asosiy">Asosiy</string>
    <string name="explore">Explore</string>
    <string name="yordam">Yordam</string>
    <string name="ko_proq">Ko\'proq</string>
    <string name="xizmatlar">Xizmatlar</string>
    <string name="menyu">Menu</string>
    <string name="yangi">Yangi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>