<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_main"
        android:icon="@drawable/ic_home"
        app:showAsAction="always"
        android:title="@string/asosiy" />

    <item
        android:id="@+id/btn_service"
        app:showAsAction="always"
        android:title="@string/xizmatlar" />

    <item
        android:id="@+id/btn_new"
        app:showAsAction="always"
        android:title="@string/yangi" />
    <item
        android:id="@+id/btn_chat"
        android:icon="@drawable/ic_chat"
        app:showAsAction="always"
        android:title="@string/yordam" />
    <item
        android:id="@+id/btn_menyu"
        android:icon="@drawable/ic_kuproq_ic"
        app:showAsAction="always"
        android:title="@string/menyu" />

</menu>